--- a/style.css
+++ b/style.css
@@ -199,6 +199,11 @@ input, select, textarea {
     z-index:100;
 }
 
+.food-info-section {
+    background:rgba(255, 207, 207, 0.178);
+    overflow-y: auto;
+}
+
 .food-info-popup {
     z-index:999;
     position: relative;
@@ -207,14 +212,74 @@ input, select, textarea {
     transform: translate(-50%, -50%);
     background:var(--white);
     width:90%;
+    height:20rem;
     display:grid;
-    grid-template-columns:0.25fr 1fr;
+    grid-template-columns:5rem 1fr;
+    text-align: center;
+}
+
+
+.food-info-popup__close-btn {
+    position: absolute;
+    width:3rem;
+    height:3rem;
+    font-size:1.75rem;
+    border-radius: 50%;
+    border:none;
+    background:rgb(255, 4, 4);
+    color:#fff;
+
+    left:102%;
+    top:-5%;
+    transform:translate(-102%, 5%);
+    transition: background-color 0.25s ease;
+}
+
+.food-info-popup__close-btn:hover {
+    cursor: pointer;
+    background:#ff5959;
 }
 
 .food-info-popup__icons {
-    /*do display grid  here*/
-    background:gray;
+    background:rgb(61, 61, 61);
+    display:grid;
+    grid-template-rows:repeat(4, 1fr);
+    justify-content: center;
+    align-items:center;
+    width:5rem;
+    height:20rem;
 }
+
+.food-info-popup__icon {
+    width:inherit;
+    height:100%;
+    font-size:1.8rem;
+    display: grid;
+    justify-content: center;
+    align-items:center;
+    transition:all 0.25s ease;
+    color:rgb(230, 230, 230);
+}
+
+.food-info-popup__icon:hover {
+    background:rgb(26, 26, 26);
+    cursor: pointer;
+}
+
+.food-info-popup__header {
+    font-size: 1.8rem;
+    margin-top:0.75rem;
+}
+
+.food-info-popup__info-item {
+    width:72ch;
+    margin:2rem auto 0 auto;
+    line-height: 1.75;
+    display:none;
+}
+
+
+
 
 /*misc*/
 /*
@@ -224,4 +289,13 @@ When the popup pops up apply this class to...
 */
 .blur {
     filter:blur(10px);
+}
+
+
+.current-tab {
+    background:rgb(26, 26, 26);
+}
+
+.current-tab-text {
+    display:block;
 }
